# basic_maps

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  compile_commands.json  run.sh
include/fileManager/: fileManager.hpp
include/renderer/: renderer.hpp
include/shader/: shader.hpp
include/window/: window.hpp
res/shaders/: basic.fs  basic.vs
src/: main.cpp
src/fileManager/: fileManager.cpp
src/renderer/: renderer.cpp
src/shader/: shader.cpp
src/window/: window.cpp
